--- a/src/app/top/main-tabs/main-tabs.component.html
+++ b/src/app/top/main-tabs/main-tabs.component.html
@@ -1,1 +1,28 @@
-<p>main-tabs works!</p>
+<div class="mainTabs top1">
+
+  <div class="tab" routerLinkActive="activeTab" [routerLink]="['/top1']">
+    <div class="tabHeader">
+      <div class="imgHolder">
+        <img src="assets/images/tabImg2.png" alt="alt">
+      </div>
+      <div class="text">Статистика станции</div>
+    </div>
+
+    <div class="num">2,5%</div>
+
+    <div class="desc">Изменения в рейтинге</div>
+  </div>
+
+  <div class="tab" routerLinkActive="activeTab" [routerLink]="['/top2']">
+    <div class="tabHeader">
+      <div class="imgHolder">
+        <img src="assets/images/tabImg3.png" alt="alt">
+      </div>
+      <div class="text">Рейтинг</div>
+    </div>
+
+    <div class="num">5<sup>+2</sup></div>
+
+    <div class="desc">Изменения статистики</div>
+  </div>
+</div>
