--- a/src/app/top/top2/top2.component.html
+++ b/src/app/top/top2/top2.component.html
@@ -29,34 +29,7 @@
 
   <!--  main tabs  -->
 
-  <div class="mainTabs top1">
-
-    <div class="tab">
-      <div class="tabHeader">
-        <div class="imgHolder">
-          <img src="assets/images/tabImg2.png" alt="alt">
-        </div>
-        <div class="text">Статистика станции</div>
-      </div>
-
-      <div class="num">2,5%</div>
-
-      <div class="desc">Изменения в рейтинге</div>
-    </div>
-
-    <div class="tab activeTab">
-      <div class="tabHeader">
-        <div class="imgHolder">
-          <img src="assets/images/tabImg3.png" alt="alt">
-        </div>
-        <div class="text">Рейтинг</div>
-      </div>
-
-      <div class="num">5<sup>+2</sup></div>
-
-      <div class="desc">Изменения статистики</div>
-    </div>
-  </div>
+  <app-main-tabs></app-main-tabs>
 
   <!--  /main tabs  -->
 
