--- a/src/app/territorial/territorial2/territorial2.component.html
+++ b/src/app/territorial/territorial2/territorial2.component.html
@@ -29,62 +29,7 @@
 
   <!--  main tabs  -->
 
-  <div class="mainTabs">
-
-    <div class="tab">
-      <div class="tabHeader">
-        <div class="imgHolder">
-          <img src="assets/images/tabImg3.png" alt="alt">
-        </div>
-        <div class="text">Рейтинг</div>
-      </div>
-
-      <div class="num">5<sup>+2</sup></div>
-
-      <div class="desc">Изменения статистики</div>
-    </div>
-
-    <div class="tab activeTab">
-      <div class="tabHeader">
-        <div class="imgHolder">
-          <img src="assets/images/tabImg2.png" alt="alt">
-        </div>
-        <div class="text">Статистика станции</div>
-      </div>
-
-      <div class="num">2,5%</div>
-
-      <div class="desc">Изменения в рейтинге</div>
-    </div>
-
-    <div class="tab">
-      <div class="tabHeader">
-        <div class="imgHolder">
-          <img src="assets/images/video.png" alt="alt">
-        </div>
-        <div class="text">Не просмотренные видео</div>
-      </div>
-
-      <div class="num">399</div>
-
-      <div class="desc">Новых видео</div>
-    </div>
-
-    <div class="tab">
-      <div class="tabHeader">
-        <div class="imgHolder">
-          <img src="assets/images/tabImg4.png" alt="alt">
-        </div>
-        <div class="text">Чеклист</div>
-      </div>
-
-      <div class="num">
-        <img src="assets/images/Report.png" alt="alt">
-      </div>
-
-      <div class="desc">Есть изменеия в чеклисте</div>
-    </div>
-  </div>
+  <app-main-tabs></app-main-tabs>
 
   <!--  /main tabs  -->
 
