--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -42,7 +42,7 @@
       <div class="noticeWrap">
         <div class="noticeHolder" (click)="notificationsReverse()">
           <img src="assets/images/Notifications.png" alt="alt">
-          <div class="alert">5</div>
+          <div class="alertRed">5</div>
         </div>
 
         <div class="dropWrap noticeDrop" *ngIf="notifications">
