--- a/src/app/manager/manager1/manager1.component.html
+++ b/src/app/manager/manager1/manager1.component.html
@@ -2,19 +2,21 @@
 
   <!--  date inputs  -->
   <div class="dateInputsWrap">
+
     <div class="dateInput">
       <div class="calendal">
         <img src="assets/images/calendar.png" alt="alt">
       </div>
-      <input type="text" placeholder="25/06/2019">
+      <input type="text" placeholder="25/06/2019" bsDatepicker>
     </div>
     <div class="sep">—</div>
     <div class="dateInput">
       <div class="calendal">
         <img src="assets/images/calendar.png" alt="alt">
       </div>
-      <input type="text" placeholder="25/06/2019">
+      <input type="text" placeholder="25/06/2019" bsDatepicker>
     </div>
+
   </div>
 
   <!--  /date inputs  -->
