--- a/src/app/manager/manager1/manager1.component.html
+++ b/src/app/manager/manager1/manager1.component.html
@@ -7,14 +7,15 @@
       <div class="calendal">
         <img src="assets/images/calendar.png" alt="alt">
       </div>
-      <input type="text" placeholder="25/06/2019" bsDatepicker>
+      <p-calendar placeholder="25/06/2019" formControlName="date"></p-calendar>
     </div>
     <div class="sep">—</div>
     <div class="dateInput">
       <div class="calendal">
         <img src="assets/images/calendar.png" alt="alt">
       </div>
-      <input type="text" placeholder="25/06/2019" bsDatepicker>
+      <!--<input type="text" placeholder="25/06/2019">-->
+      <p-calendar placeholder="25/06/2019" formControlName="date"></p-calendar>
     </div>
 
   </div>
