--- a/src/app/manager/manager2/manager2.component.css
+++ b/src/app/manager/manager2/manager2.component.css
@@ -195,6 +195,54 @@
 
 /*
 
+INNER TAB FILTERS
+
+*/
+.filtersWrap {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+.filtersWrap .filter {
+  margin-right: 30px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  width: 142px;
+  height: 40px;
+  background: #e4eaec;
+  padding: 0 20px;
+  cursor: pointer;
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 100;
+  color: #808a92;
+  z-index: 10;
+  position: relative; }
+.filtersWrap .filter:last-child {
+  margin-right: 0; }
+
+/*
+
 MULTI TABS
 
 */
