--- a/src/app/manager/manager1/manager1.component.html
+++ b/src/app/manager/manager1/manager1.component.html
@@ -1,23 +1,9 @@
 <div class="mainWrap">
 
   <!--  date inputs  -->
-  <div class="dateInputsWrap">
 
-    <div class="dateInput">
-      <div class="calendal">
-        <img src="assets/images/calendar.png" alt="alt">
-      </div>
-      <p-calendar [(ngModel)]="dateFrom" dateFormat="dd.mm.yy" placeholder="25/06/2019" (click)="getData()"></p-calendar> <!--(onSelect)="getData($event)"-->
-    </div>
-    <div class="sep">—</div>
-    <div class="dateInput">
-      <div class="calendal">
-        <img src="assets/images/calendar.png" alt="alt">
-      </div>
-      <p-calendar [(ngModel)]="dateTo" (click)="getData()"  placeholder="25/06/2019" ></p-calendar>
-    </div>
+  <app-date-inputs></app-date-inputs>
 
-  </div>
   <!--  /date inputs  -->
 
   <!--  processed  -->
@@ -33,7 +19,6 @@
   <!--  /main tabs  -->
 
   <!--  inner tab  -->
-
   <div class="innerTab innerTab1">
 
     <div class="head">
@@ -54,7 +39,62 @@
       </div>
     </div>
 
-    <div class="singleVideo">
+    <div class="singleVideo" *ngFor="let item of videos">
+      <div class="videoWrap">
+        <div class="videoHolder">
+          <img [src]="item.video1" alt="alt">
+        </div>
+        <div class="videoHolder">
+          <img [src]="item.video2" alt="alt">
+        </div>
+      </div>
+
+      <div class="info">
+        <div class="top">
+          <div class="text">
+            <div class="date">{{item.date}}</div>
+            <div class="name">{{item.operator}} Камера {{item.camera}}</div>
+          </div>
+
+          <div class="favorite">
+            <img src="assets/images/star.png" alt="alt">
+          </div>
+        </div>
+
+        <div class="bottom">
+          <div class="column">
+            <div class="item" *ngIf="item.greeting">
+              <div class="text">Приветствие клиента</div>
+              <img src="assets/images/Message.png" alt="alt">
+            </div>
+            <div class="item" *ngIf="item.offer">
+              <div class="text">Предложить карту лояльности</div>
+              <img src="assets/images/Message.png" alt="alt">
+            </div>
+            <div class="item" *ngIf="item.regionalAction">
+              <div class="text">Региональная акция</div>
+              <img src="assets/images/Message.png" alt="alt">
+            </div>
+          </div>
+          <div class="column">
+            <div class="item" *ngIf="item.greeting">
+              <div class="text">Приветствие клиента</div>
+              <img src="assets/images/Message.png" alt="alt">
+            </div>
+            <div class="item" *ngIf="item.offer">
+              <div class="text">Предложить карту лояльности</div>
+              <img src="assets/images/Message.png" alt="alt">
+            </div>
+            <div class="item" *ngIf="item.regionalAction">
+              <div class="text">Региональная акция</div>
+              <img src="assets/images/Message.png" alt="alt">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+<!--    <div class="singleVideo">
       <div class="videoWrap">
         <div class="videoHolder">
           <img src="assets/images/videoPreview.png" alt="alt">
@@ -217,62 +257,7 @@
           </div>
         </div>
       </div>
-    </div>
-
-    <div class="singleVideo">
-      <div class="videoWrap">
-        <div class="videoHolder">
-          <img src="assets/images/videoPreview.png" alt="alt">
-        </div>
-        <div class="videoHolder">
-          <img src="assets/images/videoPreview.png" alt="alt">
-        </div>
-      </div>
-
-      <div class="info">
-        <div class="top">
-          <div class="text">
-            <div class="date">10.07.2019</div>
-            <div class="name">Оператор Камера 2</div>
-          </div>
-
-          <div class="favorite">
-            <img src="assets/images/star.png" alt="alt">
-          </div>
-        </div>
-
-        <div class="bottom">
-          <div class="column">
-            <div class="item">
-              <div class="text">Приветствие клиента</div>
-              <img src="assets/images/Message.png" alt="alt">
-            </div>
-            <div class="item">
-              <div class="text">Предложить карту лояльности</div>
-              <img src="assets/images/Message.png" alt="alt">
-            </div>
-            <div class="item">
-              <div class="text">Региональная акция</div>
-              <img src="assets/images/Message.png" alt="alt">
-            </div>
-          </div>
-          <div class="column">
-            <div class="item">
-              <div class="text">Приветствие клиента</div>
-              <img src="assets/images/Message.png" alt="alt">
-            </div>
-            <div class="item">
-              <div class="text">Предложить карту лояльности</div>
-              <img src="assets/images/Message.png" alt="alt">
-            </div>
-            <div class="item">
-              <div class="text">Региональная акция</div>
-              <img src="assets/images/Message.png" alt="alt">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    </div>-->
 
     <div class="paginator">
       <button><</button>
@@ -285,7 +270,6 @@
     </div>
 
   </div>
-
   <!--  /inner tab  -->
 
 </div>
