--- a/src/app/manager/manager1/manager1.component.css
+++ b/src/app/manager/manager1/manager1.component.css
@@ -406,3 +406,25 @@ VIDEO TAB
 .innerTab1 .paginator .active {
   background: #37474f;
   color: #ffffff; }
+
+::ng-deep ngb-pagination .page-item.active .page-link {
+  background-color: #37474f;
+  color: #ffffff;
+  border-color: #fff;}
+::ng-deep ngb-pagination .page-link:hover {
+  background-color: #37474f;
+  color: #ffffff;}
+::ng-deep ngb-pagination .page-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  width: 33px;
+  height: 33px;
+  margin-right: 10px;
+  outline: none;
+  color: #76838f;
+  border-radius: 4px;}
+::ng-deep ngb-pagination .page-item:last-child .page-link {
+  margin-right: 0;
+  margin-left: 0;}
